bug(ui): fix environment dropdown z-index (#7998)
* bug(ui): fix env dropdown z-index

--- a/src/sentry/static/sentry/less/stream.less
+++ b/src/sentry/static/sentry/less/stream.less
@@ -1009,6 +1009,7 @@
 
   .search {
     width: 100%;
+    z-index: @zindex-sticky-bar + 1;
   }
 
   .toggle-stream-sidebar {
